--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-src/main/resources/DEV/
+src/main/resources/DEV/application.properties
 
 ### STS ###
 .apt_generated
